# LaunchPad-BMAD

./: .gitignore  setup-github.sh
_bmad-output/: architecture-validation.md  architecture.md  bmm-workflow-status.yaml  epics-and-stories.md  implementation-readiness.md  launchpad-mockup.html  prd.md  sprint-planning.md  test-design.md  ux-design-specification.md
_bmad-output/analysis/: brainstorming-session-2025-12-22.md  product-brief-LaunchPad-2025-12-22.md
_bmad-output/stories/: 1-1-livekit-voice-processing-setup.md  1-2-basic-agent-intelligence.md  1-3-google-meet-integration.md  sprint-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: .coverage  .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/src/: __init__.py
app/src/agent/: __init__.py
app/src/utils/: __init__.py
app/src/voice/: __init__.py  audio_quality.py  config.py  livekit_client.py  stt_pipeline.py  tts_pipeline.py
app/tests/: __init__.py  conftest.py
app/tests/voice/: __init__.py  test_audio_quality.py  test_config.py  test_integration.py  test_pipeline_validation.py  test_stt_pipeline.py  test_tts_pipeline.py
pre-work-docs/: 01_product_vision.md  02_system_architecture.md  03_execution_plan.md  05_ai_builder_instructions.md
pre-work-docs/PRDs/: 04_prds.md  prd_01_agent_studio_mvp.md  prd_02_agent_brain_mvp.md  prd_03_meeting_runtime_mvp.md  prd_04_artifact_generation_storage_mvp.md  prd_05_rbac_permissions_mvp.md
(+1 files in other folders)
